# veiled

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  lefthook.yml
.github/workflows/: ci.yml  release.yml
src/: builtins.rs  cli.rs  config.rs  daemon.rs  disksize.rs  main.rs  registry.rs  scanner.rs  tmutil.rs  updater.rs
src/commands/: add.rs  list.rs  mod.rs  remove.rs  reset.rs  run.rs  start.rs  status.rs  stop.rs  update.rs
tests/: cli.rs
