[package]
name = "veiled"
version = "0.0.5"
edition = "2024"
description = "Veiled CLI -- A macOS CLI to automatically exclude development artifacts from Time Machine backups"
license = "MIT"
repository = "https://github.com/adeonir/veiled"
homepage = "https://adeonir.github.io/veiled"
keywords = ["macos", "timemachine", "backup", "tmutil", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dirs = "6.0"
fs2 = "0.4"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
semver = "1.0"
sha2 = "0.10"
serde_json = "1.0"
toml = "1.0"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3"
tempfile = "3.25"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
strip = true
lto = true
