[package]
name = "veiled"
version = "0.0.9"
edition = "2024"
description = "Veiled CLI -- A macOS CLI to automatically exclude development artifacts from Time Machine backups"
license = "MIT"
repository = "https://github.com/adeonir/veiled"
homepage = "https://adeonir.github.io/veiled"
keywords = ["macos", "timemachine", "backup", "tmutil", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dirs = "6.0"
fs2 = "0.4"
libc = "0.2"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
semver = "1.0"
sha2 = "0.10"
serde_json = "1.0"
toml = "1.0"
tempfile = "3.25"
ureq = { version = "3", features = ["json"] }
xattr = "1.6.1"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3"
proptest = "1.6"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[package.metadata.release]
publish = false
push = true
push-remote = "origin"
tag-prefix = "v"
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"

[profile.release]
strip = true
lto = true
